Corrigido warnings das classes java, corrigida formatação de preços na pagina Index e removido uso da função List.of() pois não é compativel com o Java 8